# bds-agent-py

./: .gitignore  PYPI_README.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: AGENT_YAML.md  RULES.md  SINKS.md  USER_GUIDE.md
examples/: agent.example.yaml  dex-alerts-slack.yaml  dex-alerts.yaml
src/bds_agent/: __main__.py  catalog.py  cli.py  client.py  config.py  console_ui.py  create.py  credentials.py  credits_api.py  defaults.py  evm_config.py  evm_erc20.py  paths.py  plan_fields.py  profile_env.py  query.py  runner.py  signup_api.py  signup_pay_api.py  tempo_config.py  tempo_topup.py  verify.py
src/bds_agent/llm/: __init__.py  anthropic.py  apfel.py  config_io.py  exceptions.py  local.py  ollama.py  openai.py  resolve.py  schema.py  setup_interactive.py
src/bds_agent/mcp/: __init__.py  registry.py  server.py
src/bds_agent/rules/: __init__.py  helpers.py  min_usd.py  pool_filter.py  price_move.py  state.py  token_filter.py  volume_spike.py
src/bds_agent/sinks/: __init__.py  discord.py  slack.py  stdout.py  telegram.py  webhook.py
tests/: conftest.py  test_catalog_agent_filter.py  test_catalog_ref.py  test_config.py  test_create.py  test_defaults.py  test_llm.py  test_mcp_registry.py  test_profile_env.py  test_query.py  test_rules.py  test_runner.py  test_signup_default_url.py  test_sinks.py  test_verify.py
